# cuda-crtp

./: .gitignore  CMakeLists.txt  LICENSE
Generic-Library/include/: A.cuh  B.cuh  BB.cuh  C.cuh  CC.cuh
examples/: CMakeLists.txt  test.cu
